objects/Quote.object
<CustomObject>
    <fields>
        <fullName>AW_Contract_Numbers__c</fullName>
        <label>Contract Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AW_Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Planned_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Solution</label>
        <referenceTo>AW_Planned_Solution__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_ProductSubCategory__c</fullName>
        <description>This field displays the Product Sub Category for Risk New Business Quotes and New Business Quotes</description>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Protection</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Retirement Annuity</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>436</fullName>
                    <label>GateWay ProductGroup</label>
                </value>
                <value>
                    <fullName>445</fullName>
                    <label>Liberty Retirement Annuity</label>
                </value>
                <value>
                    <fullName>432</fullName>
                    <label>Evolve Investment Plan</label>
                </value>
                <value>
                    <fullName>433</fullName>
                    <label>Evolve Retirement Annuity</label>
                </value>
                <value>
                    <fullName>435</fullName>
                    <label>Evolve Investment Plan(Sinking Fund)</label>
                </value>
                <value>
                    <fullName>405</fullName>
                    <label>Flexible Investment Plan</label>
                </value>
                <value>
                    <fullName>406</fullName>
                    <label>Flexible Investment Plan Sinking Fund</label>
                </value>
                <value>
                    <fullName>251</fullName>
                    <label>Investment Plan</label>
                </value>
                <value>
                    <fullName>252</fullName>
                    <label>Investment Plan with Income</label>
                </value>
                <value>
                    <fullName>258</fullName>
                    <label>Offshore Investment Plan</label>
                </value>
                <value>
                    <fullName>412</fullName>
                    <label>Investment Builder</label>
                </value>
                <value>
                    <fullName>413</fullName>
                    <label>Investment Linked Repayment Option</label>
                </value>
                <value>
                    <fullName>415</fullName>
                    <label>Retirement Annuity Builder</label>
                </value>
                <value>
                    <fullName>414</fullName>
                    <label>Education Builder</label>
                </value>
                <value>
                    <fullName>264</fullName>
                    <label>Lifestyle Protector</label>
                </value>
                <value>
                    <fullName>446</fullName>
                    <label>Liberty Pension/Provident Preserver</label>
                </value>
                <value>
                    <fullName>434</fullName>
                    <label>Evolve Pension/Provident Preserver</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Guaranteed Income Annuity</label>
                </value>
                <value>
                    <fullName>186</fullName>
                    <label>Guaranteed Investment Plan with Income</label>
                </value>
                <value>
                    <fullName>47</fullName>
                    <label>Life Annuity</label>
                </value>
                <value>
                    <fullName>239</fullName>
                    <label>Life Annuity with Inflation Protection</label>
                </value>
                <value>
                    <fullName>185</fullName>
                    <label>Guaranteed Investment Plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_QuoteFileName__c</fullName>
        <description>Servicing Quote PDF file name</description>
        <label>Quote File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Quote_DateTime__c</fullName>
        <description>Used to identify the exact date/time from BPO response and to create</description>
        <label>Quote DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_Quote_Date__c</fullName>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Quote_Solution_Number__c</fullName>
        <externalId>true</externalId>
        <label>Quote Solution Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>atWork</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Avalon</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>BPNB</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Total_Investment_Amount__c</fullName>
        <label>Total Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Total_Premium_Amount__c</fullName>
        <label>Total Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>AW_NewBusiness</fullName>
        <active>true</active>
        <description>This record type is used to create a New Business type quote.</description>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_ServicingQuote</fullName>
        <active>true</active>
        <description>This record type is used to create a servicing type quote.</description>
        <label>Servicing Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>